--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'org.sonarqube' version '2.6.2'
 }
 
+apply plugin: 'application'
 apply from: 'gradle/versions.gradle'
 apply from: 'gradle/eclipse.gradle'
 apply from: 'gradle/immutables.gradle'
@@ -14,6 +15,7 @@ apply from: 'gradle/checkstyle.gradle'
 apply from: 'gradle/findbugs.gradle'
 
 group = 'prototype'
+mainClassName = "prototype.Test"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
