--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -31,7 +31,7 @@ appender.rolling.strategy.max = 5
 
 logger.rolling.name = prototype
 logger.rolling.level = debug
-logger.rolling.additivity = false
+logger.rolling.additivity = true
 logger.rolling.appenderRef.rolling.ref = RollingFile
 
 rootLogger.level = info
